tests/errors/types/unknown_variable_type.ne
function main(): int32
{
    a: notExistingType;
}
